--- a/css/alpha.css
+++ b/css/alpha.css
@@ -1,7 +1,10 @@
 body{
     background: rgb(235, 235, 235) !important;
 }
-
+a{
+    color: inherit !important;
+    font-family: inherit !important;
+}
 h1,h2,h3{
     font-family: 'Segoe UI', 'Segan Light', 'Arial Rounded' !important;
 }
@@ -53,4 +56,23 @@ h1,h2,h3{
     background: rgb(255, 255, 255);
     padding: 10px 10px 10px 10px;
     margin-bottom: 30px !important;
+}
+
+.f-green {
+    color: rgb(30,120,30);
+}
+
+.f-pink {
+    color: rgb(180,40,80);
+}
+
+.btn-dash-order {
+    height: 3em;    
+    width:inherit;
+    padding-top: 0.7em;
+    background: rgb(255, 76, 92);
+    color: white;
+    border-radius: 4px;
+    border-bottom: 4px solid;
+    border-bottom-color: rgb(195,36,22);
 }
